Fix overflow issue on mobile

--- a/src/common/components/entry-list-item/_index.scss
+++ b/src/common/components/entry-list-item/_index.scss
@@ -130,3 +130,9 @@
 .mute-icon {
   width: 20px;
 }
+
+.overflow-sm-hidden {
+  @media (max-width: $sm-break) {
+    overflow: hidden;
+  }
+}
